--- a/static/frontPage/index.html
+++ b/static/frontPage/index.html
@@ -8,7 +8,37 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="js/jquery-1.11.2.js"></script>
     <script src="js/index.js"></script>
+    <script>
+        queryURl("http://localhost:9876/gudao/product/allProducts");//填地址
 
+        function queryURl(url){
+            $.ajax({
+                type:"get",
+                url:url,
+                dataType:"jsonp",
+                jsonp:"cb",
+                jsonpCallback:"callback",
+                success:function (data) {
+                    var str='';
+                    var allsp =  $(".allsp");
+                    $.each(data,function (index,item) {
+                        str+='<figure>';
+                        str+='<a href="spxq.html"+item.productId><img src="'+item.productIconOne+'" alt="商品" class="xqtp"/></a>';
+                        str+='<p>item.productName</p>';
+                        str+='<div class="info">';
+                        str+='<em class="sat"><small>item.productPrice</small></em>';
+                        str+='<a href="#"><img src="images/u20.png" alt="购物车" style="width: 30px;height: 30px" align="right"/></a>';
+                        str+='</div>';
+                        str+='</figure>';
+                    });
+                    allsp.append(str);
+                },error:function (e) {
+
+                }
+            })
+        }
+
+    </script>
 
 </head>
 <body>
