--- a/static/frontPage/spxq.html
+++ b/static/frontPage/spxq.html
@@ -7,8 +7,63 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/spxq.css"/>
     <link rel="stylesheet" type="text/css" href="css/swipe.css">
+    <script src="js/jquery-1.11.2.js"></script>
     <script type="text/javascript" src="js/touch.js"></script>
+    <script src="js/Product.js"></script>
 
+    <script>
+         queryGoodsInfo();
+         function queryGoodsInfo(){
+             var id = GetRequest();
+                 $.ajax({
+                    type:"get",
+                    url:url+id,
+                    dataType:"jsonp",
+                    jsonp:"cb",
+                    success:function (data) {
+                        var product = new Product({
+                        info:data.info,
+                        address:data.address,
+                        phone:data.phone,
+                        price:data.price,
+                        images:data.images
+                 });
+                 product.init();
+                 },error:function (e) {
+
+                 }
+             })
+         }
+        function GetRequest() {
+            var url = location.search;
+            console.log(url)//获取url中"?"符后的字串
+            var theRequest = new Object();
+            if (url.indexOf("?") != -1) {
+                var str = url.substr(1);
+                strs = str.split("&");
+                for (var i = 0; i < strs.length; i++) {
+                    theRequest[strs[i].split("=")[0]] = unescape(strs[i].split("=")[1]);
+                }
+            }
+            return theRequest;
+        }
+         $(function () {
+             $("#addCarBtn").click(function(){
+                 var id = GetRequest();
+                 var url = "http://gudao/cart/add"+id;
+                 $.ajax({
+                     type:"get",
+                     url:url,
+                     success:function (data) {
+
+                     },error:function (e) {
+
+                     }
+                 })
+             })
+         })
+
+    </script>
 </head>
 <body>
 <div class="body">
@@ -33,26 +88,11 @@
             </ul>
         </div>
         <!-- 轮播 -->
-        <script src="js/swipe.js"></script>
-        <script type="text/javascript">
-            var bullets = document.getElementById('position').getElementsByTagName('li');
-            var banner = Swipe(document.getElementById('mySwipe'), {
-                auto: 3000,
-                continuous: true,
-                disableScroll:false,
-                callback: function(pos) {
-                    var i = bullets.length;
-                    while (i--) {
-                        bullets[i].className = ' ';
-                    }
-                    bullets[pos].className = 'cur';
-                }
-            });
-        </script>
+
         <p>商品价格</p>
         <div class="info">
             <em class="sat">￥100</em>
-            <a href="shoppingCart.html"><button type="button" class="btn">加入购物车</button></a>
+            <a href="javascript:false"><button type="button" class="btn" id="addCarBtn">加入购物车</button></a>
         </div>
     </figure>
     <hr/>
@@ -72,4 +112,21 @@
     </div>
 </div>
 </body>
+<script src="js/swipe.js"></script>
+<script type="text/javascript">
+    var bullets = document.getElementById('position').getElementsByTagName('li');
+    var banner = Swipe(document.getElementById('mySwipe'), {
+        auto: 3000,
+        continuous: true,
+        disableScroll:false,
+        callback: function(pos) {
+            var i = bullets.length;
+            while (i--) {
+                bullets[i].className = ' ';
+            }
+            bullets[pos].className = 'cur';
+        }
+    });
+
+</script>
 </html>
